--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                 alt="durmon"
                 width="350"
                 height="350"
+                loading="lazy"
                 class="w-full h-full object-cover"
               />
             </div>
@@ -243,6 +244,7 @@
                 alt="durmon"
                 width="350"
                 height="350"
+                loading="lazy"
                 class="w-full h-full object-cover"
               />
             </div>
@@ -258,6 +260,7 @@
                 alt="durmon"
                 width="350"
                 height="350"
+                loading="lazy"
                 class="w-full h-full object-cover"
               />
             </div>
@@ -307,6 +310,7 @@
                 alt="durmon"
                 width="350"
                 height="350"
+                loading="lazy"
                 class="w-full h-full object-cover"
               />
             </div>
@@ -321,6 +325,7 @@
                 alt="durmon"
                 width="350"
                 height="350"
+                loading="lazy"
                 class="w-full h-full object-cover"
               />
             </div>
@@ -366,6 +371,7 @@
               alt="durmon house"
               width="200"
               height="200"
+              loading="lazy"
               class="w-full h-56 object-center object-fill"
             />
             <h3 class="text-xl text-center mx-5 py-4">
@@ -390,6 +396,7 @@
               alt="durmon house"
               width="200"
               height="200"
+              loading="lazy"
               class="w-full h-56 object-center object-fill"
             />
             <h3 class="text-xl text-center mx-5 py-4">
@@ -414,6 +421,7 @@
               alt="durmon house"
               width="200"
               height="200"
+              loading="lazy"
               class="w-full h-56 object-center object-fill"
             />
             <h3 class="text-xl text-center mx-5 py-4">
@@ -438,6 +446,7 @@
               alt="durmon house"
               width="200"
               height="200"
+              loading="lazy"
               class="w-full h-56 object-center object-fill"
             />
             <h3 class="text-xl text-center mx-5 py-4">
@@ -462,6 +471,7 @@
               alt="durmon house"
               width="200"
               height="200"
+              loading="lazy"
               class="w-full h-56 object-center object-fill"
             />
             <h3 class="text-xl text-center mx-5 py-4">
@@ -486,6 +496,7 @@
               alt="durmon house"
               width="200"
               height="200"
+              loading="lazy"
               class="w-full h-56 object-center object-fill"
             />
             <h3 class="text-xl text-center mx-5 py-4">
@@ -510,6 +521,7 @@
               alt="durmon house"
               width="200"
               height="200"
+              loading="lazy"
               class="w-full h-56 object-center object-fill"
             />
             <h3 class="text-xl text-center mx-5 py-4">
@@ -534,6 +546,7 @@
               alt="durmon house"
               width="200"
               height="200"
+              loading="lazy"
               class="w-full h-56 object-center object-fill"
             />
             <h3 class="text-xl text-center mx-5 py-4">
@@ -583,6 +596,7 @@
               alt="durmon avenue"
               width="240"
               height="240"
+              loading="lazy"
               class="w-full h-full object-cover hover:shadow-md hover:scale-105 transition duration-300 ease-in-out"
             />
           </div>
@@ -593,6 +607,7 @@
               alt="durmon avenue"
               width="240"
               height="240"
+              loading="lazy"
               class="w-full h-full object-cover hover:shadow-md hover:scale-105 transition duration-300 ease-in-out"
             />
           </div>
@@ -603,6 +618,7 @@
               alt="durmon avenue"
               width="240"
               height="240"
+              loading="lazy"
               class="w-full h-full object-cover hover:shadow-md hover:scale-105 transition duration-300 ease-in-out"
             />
           </div>
@@ -613,6 +629,7 @@
               alt="durmon avenue"
               width="240"
               height="240"
+              loading="lazy"
               class="w-full h-full object-cover hover:shadow-md hover:scale-105 transition duration-300 ease-in-out"
             />
           </div>
@@ -623,6 +640,7 @@
               alt="durmon avenue"
               width="240"
               height="240"
+              loading="lazy"
               class="w-full h-full object-cover hover:shadow-card hover:scale-105 transition duration-300 ease-in-out"
             />
           </div>
@@ -633,6 +651,7 @@
               alt="durmon avenue"
               width="240"
               height="240"
+              loading="lazy"
               class="w-full h-full object-cover hover:shadow-card hover:scale-105 transition duration-300 ease-in-out"
             />
           </div>
@@ -681,6 +700,7 @@
               alt="durmon and ipoteka bank"
               width="200"
               height="200"
+              loading="lazy"
               class="w-52 h-52 object-fill"
             />
           </div>
@@ -694,6 +714,7 @@
               alt="durmon and kapital bank"
               width="200"
               height="200"
+              loading="lazy"
               class="w-52 h-52 object-fill"
             />
           </div>
@@ -707,6 +728,7 @@
               alt="durmon and sqb bank"
               width="200"
               height="200"
+              loading="lazy"
               class="w-52 h-52 object-fill"
             />
           </div>
@@ -720,6 +742,7 @@
               alt="durmon and nbu bank"
               width="200"
               height="200"
+              loading="lazy"
               class="w-52 h-52 object-fill"
             />
           </div>
@@ -733,6 +756,7 @@
               alt="durmon and asaka bank"
               width="200"
               height="200"
+              loading="lazy"
               class="w-52 h-52 object-fill"
             />
           </div>
@@ -754,6 +778,7 @@
             alt="durmon logo"
             width="231"
             height="52"
+            loading="lazy"
             class="object-fill"
           />
         </a>
