--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
       }
     </style>
   </head>
+
   <body class="bg-main">
+    <!-- header -->
     <header class="h-dvh w-full">
       <!-- navbar -->
       <nav
@@ -115,7 +117,10 @@
             </a>
           </li>
           <li>
-            <a href="#about" class="text-xl font-semibold uppercase hover:text-text">
+            <a
+              href="#about"
+              class="text-xl font-semibold uppercase hover:text-text"
+            >
               About
             </a>
           </li>
@@ -171,6 +176,7 @@
       </swiper-container>
     </header>
 
+    <!-- sections -->
     <main
       class="px-4 py-2 sm:px-12 sm:py-6 md:px-16 md:py-8 lg:px-20 lg:py-10 xl:px-24 xl:py-12"
     >
@@ -358,7 +364,7 @@
         >
           our apartments
         </h1>
-        <!-- plan house  -->
+        <!-- apartment cards  -->
         <div
           class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5"
         >
